# mice-imputation-research

./: .gitignore  README.md  pyproject.toml
data/raw/: Fargo_daily updated.csv
scripts/: configs.py  dataset.py  main.py  model.py
