[project]
name = "mice-imputation"
version = "0.1.0"
description = ""
authors = [
    {name = "TyrikeDaniels",email = "dani0883@umn.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
